--- a/PokeAPI/index.css
+++ b/PokeAPI/index.css
@@ -1,3 +1,36 @@
-*{
-    background-color: rgba(0, 47, 255, 0.493);
+.transparente,
+.card {
+    background-color: rgba(248, 208, 158, 0.644);
+    box-shadow: gray;
+    border: 0px solid rgba(156, 89, 26, 0.473);
+}
+
+.card {
+    border: 0px solid rgba(156, 89, 26, 0.473);
+    border-radius: 25px;
+    background-color: rgba(255, 228, 196, 0.603);
+}
+
+.imagen-circulo {
+    background-color: rgba(245, 196, 137, 0.315);
+    margin-right: 15px;
+    border-radius: 300px;
+}
+
+.badge {
+    border: 0, 5px solid black;
+    padding: 5px;
+    padding-bottom: 7px;
+}
+
+.btn-ver-detalles:hover{
+    background-color: rgba(255, 140, 0, 0.486);
+}
+
+.btn-ver-detalles{
+
+    background-color: rgba(255, 188, 106, 0.486);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.486);
+    
+
 }
