--- a/PokeAPI/CSS/index.css
+++ b/PokeAPI/CSS/index.css
@@ -27,11 +27,10 @@
     background-color: rgba(255, 140, 0, 0.486);
 }
 
-.btn-ver-detalles{
+.btn-ver-detalles, btn{
 
     background-color: rgba(255, 188, 106, 0.486);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.486);
-    
 
 }
 
@@ -40,4 +39,12 @@
     width: 250px; 
     height: auto;
     
+}
+
+#search-input {
+    width: 300px; /* Ajusta el ancho según tus necesidades */
+}
+
+#search-button {
+    height: 38px; /* Asegura que el botón tenga la misma altura que el campo de entrada */
 }
