--- a/PokeAPI/CSS/index.css
+++ b/PokeAPI/CSS/index.css
@@ -30,7 +30,7 @@
 .btn-ver-detalles, btn{
 
     background-color: rgba(255, 188, 106, 0.486);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.486);
+    border: 0px solid black;
 
 }
 
